Flujo en la Web
Creación de fichero web.php, contenedor de las rutas de flujo de la web.
Estructura actualizada del proyecto, lo encotrarás actualizado en README.md

Conexión con la base de datos creada y datos solicitados.

Creación del fichero redireccionWeb.php, encargado de la lógica de la web.
Es un fichero que obtiene una variable ruta, la desglosa quedandose únicamente con la ruta
a traves de GET.

Para que la web cargue sin necesidad de recargarse, usamos AJAX. En mi fichero app.js utilizo
ajax para utilizar el fichero redireccionWeb.php que devolverá el controlador y la función encargada de mostrar
los datos principales o base de ese controlador y mostrarlos en su debida vista.

Fichero .htaccess, encargado de las redirecciones, me permite redirigir todas las solicitudes a redireccionWeb.php,
que usará web.php para buscar las rutas, controladores y funciones que necesite.

En proceso de acabar diseño Index, falta por arreglar error de tamaño y responsividad de imagenes y contenedores de publicaciones.
Y añadir los contenedores del Mapa y Chat, las funcionalidades después.

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,29 +1,68 @@
+/* INICIO */
+
+/* Espacio ocupado por nav */
 .bloque-menu-nav {
     height: 9vh;
 }
 
+/* Contenedor de filtro por categoria */
 #cont-filtros-desp {
     max-height: 60vh;
     width: 35%;
     overflow-y: auto;
 }
 
-
+/* Estilo botones filtros por categoria */
 #btn-filtros {
     border-radius: 5px 5px 0px 0px;
 }
-
 
 #form-filtros {
     border-radius: 5px 5px 0px 0px;
 }
 
-
+/* Botones filtro por categoria */
 #btn-desp-filtros {
     box-shadow: none;
 }
 
-/* Cambiar color del texto del encabezado cuando el acordeón está activo */
+/* Titulo Filtros desplegable*/
 .accordion-button:not(.collapsed) {
     color: black !important;
+}
+
+/* Contenedor Publicación */
+#contPublicacion {
+    max-width: 90%;
+    max-height: 300px;
+}
+
+/* Imagen Publicación */
+.carousel-item img {
+    width: 100%;
+    height: auto;
+    max-height: 400px;
+    object-fit: cover;
+}
+
+
+/* Descripción Publicación */
+.descripccionPubli {
+    display: -webkit-box;
+    -webkit-line-clamp: 3;
+    line-clamp: 3;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+/* Barra de separación */
+.barraSeparacion {
+    width: 80%;
+}
+
+/* Asegura que los contenedores de imagen no cambien de tamaño sin imágenes */
+.carousel-item {
+    background-color: #f0f0f0;
+    /* Color de fondo si no hay imagen */
 }
