--- a/views/old_index.html
+++ b/views/old_index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HabitaRoom</title>
-    <link rel="stylesheet" href="../public/css/styleIndex.css">
+    <link rel="stylesheet" href="../public/css/old_styleIndex.css">
 </head>
 
 <body class="containerI">
